# controllers/Image.js
@@ -33,6 +33,16 @@ module.exports.getImageAll = function getImageAll (req, res, next) {
     });
 };
 
+module.exports.getImageByUserId = function getImageByUserId (req, res, next,user_id) {
+  Image.getImageByUserId(user_id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.getImageById = function getImageById (req, res, next, image_id) {
   Image.getImageById(image_id)
     .then(function (response) {
